src/objects/SafetyInspection__c.object
<CustomObject>
    <description>Used to support field services, safety, and inspection use cases of ExAM where data is collected in the field.</description>
    <fields>
        <fullName>Addressee__c</fullName>
        <inlineHelpText>Addressee if different from site admin (e.g OAR)</inlineHelpText>
        <label>Addressee if different from site admin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASBESTOS MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>CAMPUS SECURITY</fullName>
                </value>
                <value>
                    <fullName>CHEMICAL SAFETY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complex_Project_Manager__c</fullName>
        <label>Complex Project Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <description>Ensure regulatory compliance with asbestos work practices, engineering controls, personal protective equipment, and clearance air monitoring requirements for all releases or abatement activities.&apos;;</description>
        <inlineHelpText>Ensure regulatory compliance with asbestos work practices, engineering controls, personal protective equipment, and clearance air monitoring requirements for all releases or abatement activities.&apos;;</inlineHelpText>
        <label>Corrective Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>Now()+14</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <defaultValue>1279</defaultValue>
        <label>Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Address__c</fullName>
        <label>Facility Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <inlineHelpText>select the facility type</inlineHelpText>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elementary School</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <inlineHelpText>This is the Facility Name</inlineHelpText>
        <label>Facility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10th Street Elementary School</fullName>
                </value>
                <value>
                    <fullName>107th Street Elementary School</fullName>
                </value>
                <value>
                    <fullName>109th Street Elementary School</fullName>
                </value>
                <value>
                    <fullName>112th Street Elementary School</fullName>
                </value>
                <value>
                    <fullName>17th Street Annex</fullName>
                </value>
                <value>
                    <fullName>Academia Avance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Type__c</fullName>
        <label>Inspection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incident Response</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Accident</fullName>
                </value>
                <value>
                    <fullName>Claims Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspector__c</fullName>
        <inlineHelpText>List of Inspectors</inlineHelpText>
        <label>Inspector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alexander Petersen</fullName>
                </value>
                <value>
                    <fullName>Bradley Smith</fullName>
                </value>
                <value>
                    <fullName>Brent Evins</fullName>
                </value>
                <value>
                    <fullName>Carlos Torres</fullName>
                </value>
                <value>
                    <fullName>Debra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <label>Locations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_No__c</fullName>
        <label>Project No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <label>Responsible Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>OEHS</fullName>
                </value>
                <value>
                    <fullName>food Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Administrator__c</fullName>
        <inlineHelpText>Site Administrator name</inlineHelpText>
        <label>Site Administrator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Asbestos Work Compliance</fullName>
                </value>
                <value>
                    <fullName>Visitor’s Pass</fullName>
                </value>
                <value>
                    <fullName>Posting – Visitation Policy</fullName>
                </value>
                <value>
                    <fullName>Communicating Emergencies</fullName>
                </value>
                <value>
                    <fullName>Program – HAZCOM</fullName>
                </value>
                <value>
                    <fullName>Chemical Inventory</fullName>
                </value>
                <value>
                    <fullName>Plan – Chemical Hygiene &amp; Safety</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Asbestos Management Plan</fullName>
                </value>
                <value>
                    <fullName>Asbestos Work Compliance</fullName>
                </value>
                <value>
                    <fullName>Visitation Policy</fullName>
                </value>
                <value>
                    <fullName>Communicating Emergencies</fullName>
                </value>
                <value>
                    <fullName>Hazard Communication</fullName>
                </value>
                <value>
                    <fullName>Chemical Hygiene &amp; Safety</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Safety Inspection</label>
    <nameField>
        <label>Safety Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Safety Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>